# ai-service-disk

ai-service-desk/: .dockerignore  .gitignore  alembic.ini  docker-compose.yml  locustfile.py  profile_results.prof  profile_test.py  pyproject.toml  requirements.txt  reset_db.py  setup_postgres.py  view_db.py  view_db_table.py
ai-service-desk/alembic/: env.py
ai-service-desk/alembic/versions/: a54a72fe58dd_change_id_to_serial.py  ecd67b50d025_new.py
ai-service-desk/app/: main.py
ai-service-desk/app/api/: ai.py  tickets.py
ai-service-desk/app/core/: config.py  database.py  exceptions.py
ai-service-desk/app/models/: ticket.py
ai-service-desk/app/schemas/: ticket.py
ai-service-desk/app/services/: ticket_service.py
ai-service-desk/app/services/aws/: bedrock_service.py
ai-service-desk/solutions/: Day-1.txt  day-2.txt
ai-service-desk/tests/: 1.py  2.py  3.py  4.py  5.py  conftest.py  test_1.py  test_2.py  test_3.py  test_4.py  test_5.py
documentation/: backend documentation.docx
