[project]
name = "ai-service-desk"
version = "0.1.0"
description = "AI-powered IT Service Desk built with FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "asyncpg>=0.29.0",
    "boto3>=1.43.54",
]

[tool.pytest.ini_options]
python_files = ["test_1.py", "test_2.py", "test_3.py", "test_4.py", "test_5.py", "conftest.py"]
asyncio_mode = "auto"


[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

